# mobi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
mobi/: __init__.py  compatibility_utils.py  extract.py  kindleunpack.py  mobi_cover.py  mobi_dict.py  mobi_header.py  mobi_html.py  mobi_index.py  mobi_k8proc.py  mobi_k8resc.py  mobi_nav.py  mobi_ncx.py  mobi_opf.py  mobi_pagemap.py  mobi_sectioner.py  mobi_split.py  mobi_uncompress.py  mobi_utils.py  mobiml2xhtml.py  unipath.py  unpack_structure.py
tests/: .gitignore  demo.mobi  test_mobi.py
