[tool.poetry]
name = "mobi"
version = "0.3.3"
description = "unpack unencrypted mobi files"
authors = ["Titusz Pan <tp@py7.de>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/iscc/mobi"
repository = "https://github.com/iscc/mobi"
keywords = ["mobi", "mobipocket", "unpack", "extract", "text"]

classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.scripts]
mobiunpack = 'mobi.kindleunpack:main'

[tool.poetry.dependencies]
python = ">=3.7"
loguru = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "<7.0"
black = "^22.1"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
