[project]
name = "mobi"
version = "0.4.0"
description = "unpack unencrypted mobi files"
authors = [{ name = "Titusz Pan", email = "tp@py7.de" }]
requires-python = ">=3.7"
readme = "README.md"
license = "GPL-3.0-only"
keywords = [
    "mobi",
    "mobipocket",
    "unpack",
    "extract",
    "text",
]
classifiers = ["Development Status :: 4 - Beta"]
dependencies = [
    "loguru>=0.6",
    "standard-imghdr>=3.13.0",
]

[project.urls]
Homepage = "https://github.com/iscc/mobi"
Repository = "https://github.com/iscc/mobi"

[project.scripts]
mobiunpack = "mobi.kindleunpack:main"

[dependency-groups]
dev = [
    "pytest",
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
